header overlap fix

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,7 +31,6 @@ body {
 
 #menu ul li {
     display: inline;
-    float: left;
     list-style: none;
 }
 
